--- a/data_preproc_OSSE_NamArea.ipynb
+++ b/data_preproc_OSSE_NamArea.ipynb
@@ -616,7 +616,7 @@
     }
    ],
    "source": [
-    "#visualize the test reconstructions\n",
+    "#visualize the test reconstructions, you do it only when you finish training and get your test_data.nc\n",
     "\n",
     "data = xr.open_dataset(\n",
     "    \"/home/t23nguye/Documents/Data_CMEMS/SCHISM_SPM/data/SCHISM_data_Nga_30eps/\"\n",
@@ -739,6 +739,8 @@
     }
    ],
    "source": [
+    "#To plot the reconstruction, the grouth truth and obervation to compare visually\n",
+    "\n",
     "rang_min=20\n",
     "rang_max=rang_min+30\n",
     "step=10\n",
@@ -751,8 +753,8 @@
     "land_mask_transposed = land_mask.transpose('lat', 'lon')\n",
     "\n",
     "# print(data.out[i])\n",
-    "v_min=0.7#np.min(data.tgt[rang_min:rang_max:10])\n",
-    "v_max=1.8#np.max(data.tgt[rang_min:rang_max:10])\n",
+    "v_min=np.min(data.tgt[rang_min:rang_max])\n",
+    "v_max=np.max(data.tgt[rang_min:rang_max])\n",
     "#draw some examples of the Reconstruction\n",
     "for i in range(rang_min,rang_max,step):\n",
     "    fig, ax = plt.subplots(figsize=[4 + 2, 4 * (data.lat.shape[0] / data.lon.shape[0])])  # Create a figure and an axes object\n",
@@ -820,7 +822,7 @@
    ],
    "source": [
     "\n",
-    "#To plot the histogram and density of OSSE data\n",
+    "#To plot the histogram and density of data\n",
     "\n",
     "\n",
     "#Step 1: Load the dataset\n",
